--- a/templates/nationalityclean/base.html
+++ b/templates/nationalityclean/base.html
@@ -2,30 +2,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Base</title>
+     <meta charset="utf-8">
+     <title>Base</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link  rel="stylesheet" type="text/css" href="{% static "nationalityclean/indexcss.css" %}" />
-
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+     <link  rel="stylesheet" type="text/css" href="{% static "nationalityclean/indexcss.css" %}" />
+     <script src="{% static "nationalityclean/index_ajax.js" %}" type="text/javascript"></script>
 </head>
 <body>
 <div class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'nationality_clean:home' %}">Remodel Nationality</a>
-    </div>
-  </div>
-</nav>
-  <div class="panel panel-primary">
-      <div class="panel-heading">Remodel Nationality of Job Seekers</div>
-      <div class="panel-body">
-    {% block body_block %}
-    {% endblock %}
-   </div></div>
+        <nav class="navbar navbar-expand-lg navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="{% url 'nationality_clean:home' %}">Remodel Nationality</a>
+            </div>
+          </div>
+        </nav>
+        <div class="panel panel-primary">
+          <div class="panel-heading">Remodel Nationality of Job Seekers</div>
+            <div class="panel-body">
+             {% block body_block %}
+             {% endblock %}
+            </div>
+        </div>
 </div>
 </body>
 </html>
