--- a/templates/nationalityclean/index.html
+++ b/templates/nationalityclean/index.html
@@ -1,11 +1,7 @@
 {% extends "nationalityclean/base.html" %}
 {% block body_block %}
-
     <table>
-
-
         <thead>
-        <tr>
             <th scope="col">#</th>
             <th scope="col">Job Seeker Nationality</th>
             <th scope="col"> Best Matched Nationality</th>
@@ -15,16 +11,11 @@
 
         <tbody>
         {% for nationality in all_nationality %}
-
             <tr>
-
                 <form action="{% url 'nationality_clean:data_post' nationality.pk %}" method="post">
                     {% csrf_token %}
                     <td> {{ forloop.counter|add:offset }}</td>
-
-                    {#{{ obj.pk }}#}
-                    <input hidden id="id" class="id" name="id" value="{{ nationality.pk }}">
-
+                    <input hidden id="nationality_pk_id" class="nationality_pk_cls" name="id" value="{{ nationality.pk }}">
                     <input hidden name="best_score" id="best_score" class="best_score" value="{{ nationality.score }}">
                     <input hidden id="verified_nationality_{{ nationality.pk }}" class="verified_nationality"
                            value="{{ nationality.verified_nationality|capfirst }}">
@@ -37,115 +28,47 @@
                         <td><select id="{{ nationality.pk }}" class="select_nationality_class" name="select_nationality">
                             {% for correct_nationality in df_nationality %}
                                 <option {% ifequal correct_nationality|lower nationality.verified_nationality %}
-                                    selected {% endifequal %}
-                                    value="{{ correct_nationality }}">{{ correct_nationality }}</option>{% endfor %}
-                        </select></td>
+                                         selected
+                                        {% endifequal %}
+                                        value="{{ correct_nationality }}">
+                                        {{ correct_nationality }}
+                                </option>
+                            {% endfor %}
+                            </select>
+                        </td>
                         <td>{{ nationality.score }}</td>
                         <td>
-                        <button name="post_all" value="post_all_data" type="submit"
-                                class="btn btn-default btn-md btn-l">
-                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post
-                        </button>
-                    {% endif %}
+                            <button name="post_all" value="post_all_data" type="submit"
+                                class="btn btn-default btn-md btn-l" >
+                                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post
+                            </button>
                         </td>
-
-
+                    {% endif %}
                 </form>
             </tr>
         {% endfor %}
-
         </tbody>
-
-
     </table>
 
-
-    {% csrf_token %}
     <nav aria-label="...">
         <ul class="pull-right">
             <label>Score Greater Than = </label>
             <span>
-            <select id="input_score" name="input_score" class="btn-space">
-  <option value="1">1</option>
-  <option value="0.99">0.99</option>
-  <option value="0.98">0.98</option>
-  <option value="0.97">0.97</option>
-  <option value="0.96">0.96</option>
-  <option value="0.95">0.95</option>
-</select>
-<button id="post_all" type="submit" name="post_all" value="post_all_data"
-        class="btn btn-primary btn-lg pull-right mt-auto">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post ALL
-                        </button>
-                </td>
+                    <select id="input_score" name="input_score" class="btn-space">
+                        <option value="1">1</option>
+                        <option value="0.99">0.99</option>
+                        <option value="0.98">0.98</option>
+                        <option value="0.97">0.97</option>
+                        <option value="0.96">0.96</option>
+                        <option value="0.95">0.95</option>
+                    </select>
+                <button id="post_all" type="submit" name="post_all" value="post_all_data"
+                        data-ajax-target="{% url 'nationality_clean:all_data_post' %}"
+                        class="btn btn-primary btn-lg pull-right mt-auto">
+                            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post ALL
+                </button>
             </span>
         </ul>
     </nav>
-
-
-    <script type="text/javascript">
-        $('.select_nationality_class').bind('change', function () {
-            var updated_na_value = $(this).val()
-            var updated_na_value_id = $(this).attr('id')
-            $(`#verified_nationality_${updated_na_value_id}`).val(updated_na_value)
-            debugger
-
-
-        });
-
-        $(document).ready(function () {
-            $("#post_all").click(function (e) {
-                e.preventDefault();
-                var nationality_id = $(".id")
-                let id_length = $(".id").length
-                let score = $(".best_score")
-                let verified_nationality = $(".verified_nationality")
-                let input_score = $("#input_score").val()
-                all_data = []
-                function list_data(id_length, score, verified_nationality, nationality_id) {
-                    each_row_data = []
-                    for (var i = 0; i < id_length; i++) {
-                        each_row_data.push(nationality_id[i], score[i], verified_nationality[i])
-                    }
-                    all_data.push(each_row_data)
-                };
-                list_data(id_length, score, verified_nationality, nationality_id)
-                function compare(nationality_id, id_length, score, input_score) {
-                    score_list = []
-                    for (var i = 0; i < id_length; i++) {
-                        if (score[i].value >= input_score) {
-                            var score_val = $(score[i]).val()
-                            var next_elem = $(score[i]).next().val()
-                            var prev_elem = $(score[i]).prev().val()
-                            score_list.push({id: prev_elem, score: score_val, Nationality: next_elem});
-                        }
-                    }
-                    return score_list
-                };
-                compare(nationality_id, id_length, score, input_score)
-                console.log(score_list);
-                var csrftoken = $("[name=csrfmiddlewaretoken]").val();
-        $.ajax({
-            type:'POST',
-            url:'{% url 'nationality_clean:all_data_post' %}',
-            headers:{
-              "X-CSRFToken": csrftoken
-                },
-            data: { 'best_score_list' : JSON.stringify(score_list), 'csrfmiddlewaretoken': '{{ csrf_token }}'  },
-             success: function(result) { //we got the response
-             alert('Nationality with score greater than ' +input_score +' Updated Successfully.');
-             window.location.reload(true);
-         },
-         error: function(jqxhr, status, exception) {
-             alert('Cannot Update score greater than ' +input_score, exception);
-         }
-        });
-        return false;
-    });
-   });
-    </script>
-
-
-
-    {% include 'nationalityclean/paginator.html' %}
+{% include 'nationalityclean/paginator.html' %}
 {% endblock %}
