--- a/templates/nationalityclean/paginator.html
+++ b/templates/nationalityclean/paginator.html
@@ -1,24 +1,33 @@
-<ul class="pagination">
+<ul class="pagination pagination-ls">
 
-  {% if page_obj.has_previous %}
-    <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
-  {% else %}
-    <li class="disabled"><span>&laquo;</span></li>
-  {% endif %}
-  {% for i in page_obj.paginator.page_range %}
+{% if page_obj.has_previous %}
+    <li><a href="?page={{ page_obj.previous_page_number }}"><i class="chevron-right">Previous</i></a></li>
+{% else %}
+    <li class="disabled"><span><i class="chevron-right" aria-hidden="true"></i></span></li>
+{% endif %}
+
+{% if page_obj.number|add:'-4' > 1 %}
+    <li><a href="?page={{ page_obj.number|add:'-5' }}">&hellip;</a></li>
+{% endif %}
+
+{% for i in page_obj.paginator.page_range %}
     {% if page_obj.number == i %}
-      <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-    {% else %}
-      <li><a href="?page={{ i }}">{{ i }}</a></li>
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+
+    {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
     {% endif %}
-  {% endfor %}
-  {% if page_obj.has_next %}
-    <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
-  {% else %}
-    <li class="disabled"><span>&raquo;</span></li>
+{% endfor %}
 
+{% if page_obj.paginator.num_pages > page_obj.number|add:'4' %}
+    <li><a href="?page={{ page_obj.number|add:'5' }}">&hellip;</a></li>
+{% endif %}
 
-  {% endif %}
-
+{% if page_obj.has_next %}
+    <li><a href="?page={{ page_obj.next_page_number }}"><i class="chevron-right" aria-hidden="true"></i>Next</a></li>
+{% else %}
+    <li class="disabled"><span><i class="chevron-right" aria-hidden="true"></i></span></li>
+{% endif %}
+    <li><span class="">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span></li>
 
 </ul>
